ROmanian language update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8031 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -34,6 +34,7 @@ foxtrick.AttVsDef.newstyle.desc=Stilul nou
 foxtrick.AttVsDef.oldstyleifkseparated.desc=Stilul vechi (fazele fixe separate)
 #Ratings
 foxtrick.Ratings.desc=Adauga ratinguri la pagina meciului
+foxtrick.Ratings.HideAverages.desc=Ascunde ratingurile medii
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detaliat)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats separat per rating
@@ -63,31 +64,41 @@ foxtrick.StaffMarker.own.desc=Marcaje personale
 foxtrick.StaffMarker.flag.desc=Adauga steaguri userilor in casuta de selectare
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Afiseaza linkuri pentru academia de tineret (functioneaza si mailuri)
-foxtrick.ForumYouthIcons.q.desc=Adauga iconita pentru quote daca lipseste
-foxtrick.ForumYouthIcons.user_id.desc=Adauga iconita pentru ID-ul userului
-foxtrick.ForumYouthIcons.kit_id.desc=Adauga iconita pentru ID-ul kitului
-foxtrick.ForumYouthIcons.article_id.desc=Adauga iconita pentru ID-ul articolului de presa
-foxtrick.ForumYouthIcons.line_br.desc=Adauga iconita pentru linia de pauza
-foxtrick.ForumYouthIcons.clock.desc=Adauga iconita pentru ora actuala
-foxtrick.ForumYouthIcons.spoiler.desc=Adauga iconita pentru spoilere
-foxtrick.ForumYouthIcons.youth_player.desc=Adauga iconita pentru ID-ul juniorului
-foxtrick.ForumYouthIcons.youth_team.desc=Adauga iconita pentru ID-ul echipei de juniori
-foxtrick.ForumYouthIcons.youth_match.desc=Adauga iconita pentru ID-ul meciului juniorilor
-foxtrick.ForumYouthIcons.youth_series.desc=Adauga iconita pentru ID-ul seriei juniorilor
+foxtrick.ForumYouthIcons.q.desc=Adauga pictograma pentru quote daca lipseste
+foxtrick.ForumYouthIcons.user_id.desc=Adauga pictograma pentru ID-ul userului
+foxtrick.ForumYouthIcons.kit_id.desc=Adauga pictograma pentru ID-ul kitului
+foxtrick.ForumYouthIcons.article_id.desc=Adauga pictograma pentru ID-ul articolului de presa
+foxtrick.ForumYouthIcons.line_br.desc=Adauga pictograma pentru linia de pauza
+foxtrick.ForumYouthIcons.clock.desc=Adauga pictograma pentru ora actuala
+foxtrick.ForumYouthIcons.spoiler.desc=Adauga pictograma pentru spoilere
+foxtrick.ForumYouthIcons.youth_player.desc=Adauga pictograma pentru ID-ul juniorului
+foxtrick.ForumYouthIcons.youth_team.desc=Adauga pictograma pentru ID-ul echipei de juniori
+foxtrick.ForumYouthIcons.youth_match.desc=Adauga pictograma pentru ID-ul meciului juniorilor
+foxtrick.ForumYouthIcons.youth_series.desc=Adauga pictograma pentru ID-ul seriei juniorilor
 foxtrick.ForumYouthIcons.enlarge_input.desc=Mareste casutele text pentru a usura scrierea
-foxtrick.ForumYouthIcons.pre.desc=Adauga icoanita pentru 'pre' formatul forumului
-foxtrick.ForumYouthIcons.table.desc=Adauga iconita pentru tabel. Tag-urile customizate accepta expresii obisnuite (Mask \ with additional \, eg \\.)
-foxtrick.ForumYouthIcons.debug.desc=Adauga iconita pentru log-ul debug al FoxTrick
-foxtrick.ForumYouthIcons.settings.desc=Adauga iconita pentru setarile FoxTrick
+foxtrick.ForumYouthIcons.pre.desc=Adauga pictograma pentru 'pre' formatul forumului
+foxtrick.ForumYouthIcons.table.desc=Adauga pictograma pentru tabel. Tag-urile customizate accepta expresii obisnuite (Mask \ with additional \, eg \\.)
+foxtrick.ForumYouthIcons.symbols.desc=Adauga pictograma pentru simbolurile de mai jos. Intrarile sunt separate de punct si virgula. Pentru a utiliza puncta si virgula introduceti "/;".
+foxtrick.ForumYouthIcons.debug.desc=Adauga pictograma pentru log-ul debug al FoxTrick
+foxtrick.ForumYouthIcons.settings.desc=Adauga pictograma pentru setarile FoxTrick
 #FormatPostingText
-foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML
+foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML (adica element 'pre')
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Arata quote-urile intr-un spoiler.Specificati mai jos nivelul.
+#EmbedMedia
+foxtrick.EmbedMedia.desc=Detecteaza link-uri catre fisiere media si le incorporeaza in site. (Experimental)
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Incorporeaza videouri YouTube
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Incorporeaza videouri Vimeo 
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Incorporeaza videouri FunnyOrDie
+foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Incorporeaza videouri Dailymotion
+#Forum direct page links
+foxtrick.DirectPageLinks.desc=Adauga link-uri care va permit sa sariti la o anumita pagina intr-un subiect de pe Forum.
+#
 foxtrick.CopyPostID.desc=Copiaza Id-ul postului in clipboard in loc sa-l afiseze pe forum
 foxtrick.CopyPosting.desc=Adauga o iconita pentru a copia mesajul si referintele inclusiv
 foxtrick.ShowForumPrefButton.desc=Link catre setarile forumului pe toate paginile forum
 foxtrick.Links.desc=Modul de baza esential pentru ca toate celelalte module sa functioneze corect.
 foxtrick.LinksLeague.desc=Adauga legaturi externe la pagina seriei
 foxtrick.LinksTeam.desc=Adauga legaturi externe la pagina echipei
-foxtrick.LinksTeam.AlltidTeamCompare.desc=Adauga functii AlltidTeamCompare
 foxtrick.LinksCountry.desc=Adauga legaturi externe la pagina tarii
 foxtrick.LinksChallenges.desc=Adauga legaturi externe la pagina provocarilor
 foxtrick.LinksEconomy.desc=Adauga legaturi externe la pagina finantelor
@@ -114,7 +125,7 @@ foxtrick.LinksClubTransfers.desc=Adauga legaturi externe catre istoria transferu
 foxtrick.ForumAlterHeaderLine.desc=Modifica linia de antet a postului
 foxtrick.Singleline2.desc=Alternativa pentru antent intr-o singura linie. Un pic mai rapid decat celelalte versiuni. Dsipart anumite conflicte care apar in momentul postarii pe forum.
 # please translate next lines again if needed
-foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Afiseaza o singura linie de antet a postului daca e posibil. Daca intampini probleme, utilizeaza 'Skinul normal', schimba numarul de steaguri afisate din linia de antet sau activeaza una din urmatoarele optiuni.
+foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Afiseaza o singura linie de antet a postului daca e posibil. Daca intampini probleme, utilizeaza tema standard si activeaza cateva optiuni din urmatoarele.
 foxtrick.ForumAlterHeaderLine.HideOldTime.desc=Ascunde ore daca mesajul postat este dintr-o zi anterioara
 foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Arata doar primele 10 (simple) / 14 (normale) caractere ale username-urilor lungi. Cu CheckDesign activat doar cand e nevoie.
 foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Arata doar liga.
@@ -145,6 +156,7 @@ foxtrick.ForumLastPost.lastpage.desc=Sare la ultima pagina, nu ultimul mesaj
 foxtrick.MatchPlayerColouring.desc=Coloreaza numele jucatorilor in raportul meciului in functie de echipele de care apartin
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Colorare separata a jucatorilor proprii
 foxtrick.MatchReportFormat.desc=Prezentare a raportului de meci linie dupa linie in functie de raport
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Adauga pictograme specifice eventurilor.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Colorare separata a propriei echipei
 foxtrick.ForumRedirManagerToTeam.desc=Redirectioneaza link-ul de la pagina managerului la pagina echipei in forumuri
 
@@ -261,7 +273,6 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=Adauga TeamPopupLinks la linkurile echipe
 foxtrick.TeamPopupLinks.UserLinks.desc=Adauga TeamPopupLinks la linkurile utilizatorului
 foxtrick.TeamPopupLinks.Manager.desc=Link catre Manager (doar pentru linkurile echipei)
 foxtrick.TeamPopupLinks.Team.desc=Link catre Echipa (doar pentru linkuri manager)
-foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link catre echipa pe Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link catre ultimele meciuri
 foxtrick.TeamPopupLinks.Players.desc=Link catre pagina jucatorilor
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link catre ultimele 5 logari
@@ -336,6 +347,7 @@ foxtrick.HTMSPoints.desc=Arata punctele de antrenament pentru un jucator calcula
 foxtrick.HTMSPoints.AddToPlayer.desc=Arata pe pagina jucatorului
 foxtrick.HTMSPoints.AddToSearchResult.desc=Arata pe pagina transferurilor
 foxtrick.HTMSPoints.AddToPlayerList.desc=Arata pe pagina cu lista jucatorilor
+foxtrick.TableOfStatisticalTruth.desc=Predicitie statistica a pozitiilor finale a seriei. (numai pentru sezoanele incheiate).
 foxtrick.FriendlyInterface.desc=Modificari pentru a furniza o interfata prietenoasa
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Arata numele jucatorilor fara elipse in pagina ordinelor meciurilor
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Afiseaza echipele nationale ca linkuri pentru jucatorii din loturile nationale
@@ -354,10 +366,20 @@ foxtrick.ShowLineupSet.Ownerless.desc=Evidentiaza echipele fara proprietar
 foxtrick.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
 foxtrick.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
 foxtrick.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
-foxtrick.MatchOrderInterface.desc=Modificari la interfata ordinelor de meci.Scoate in evidenta jucatorii care au jucat in ultimul meci si adauga diferente predicatorului de ratinguri.
+foxtrick.MatchOrderInterface.desc=Setari pe interfata de ordine meci.
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Evidentiaza jucatorii care au jucat in ultimul meci si arata ultima lor pozitie si minutele jucate in casuta de detalii
+foxtrick.MatchOrderInterface.Specialties.desc=Arata specialitatile jucatorilor
+foxtrick.MatchOrderInterface.StayOnPage.desc=Ramai in pagina de ordine meci dupa salvare
+foxtrick.MatchOrderInterface.SwapPositions.desc=Adauga un link pentru a schimba jucatorii de la stanga la dreapta
+foxtrick.MatchSimulator.desc=Adauga un simulator de meci la pagina ordine meci.
+foxtrick.MatchSimulator.RatingsOnTop.desc=Pastreaza predictia ratingurilor deasupra.
+foxtrick.MatchSimulator.RatingsBellow.desc=Afiseaza predictia mai jos.
+foxtrick.MatchSimulator.RatingsRight.desc=Afiseaza predictia in dreapta.
+foxtrick.HeaderToggle.desc=Facand clic pe h2-headers activeaza afisarea si ascunderea din sectiunea urmatoare. Retine ultima setare bazata individual pe tipul paginii si titlul antetului.
+foxtrick.Filter.desc=Adauga filtre la pagina jucatori de top
+foxtrick.RatingsRange.desc=Afiseaza ratinguri medii in statistici in intervalul 0-20.
 
-
-
+#
 
 
 # IN-GAME STRINGS. translate first
@@ -397,9 +419,12 @@ foxtrick.TeamStats.Cards.label=Cartonase
 foxtrick.TeamStats.Injured.label=Accidentati
 foxtrick.TeamStats.TransferListed.label=Jucatori aflati pe lista de transferuri
 foxtrick.TeamStats.Pictures.label=Poze
-foxtrick.TeamStats.PlayedLatest.label=Jucat in ultimul meci
-foxtrick.TeamStats.NotPlayedLatest.label=Nejucat in ultimul meci
+foxtrick.TeamStats.PlayedLatest.label=A jucat in ultimul meci
+foxtrick.TeamStats.NotPlayedLatest.label=Nu a jucat in ultimul meci
+foxtrick.TeamStats.NotTransferListed.label=Nu este pe lista de transferuri
 foxtrick.TeamStats.ActivePlayers.label=Jucatori activi
+foxtrick.TeamStats.HomeGrownPlayers.label=Jucatori club mama
+foxtrick.TeamStats.PurchasedPlayers.label=Jucatori cumparati
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -478,13 +503,33 @@ ForumSpecialBBCode.clock=Adauga ora actuala
 ForumSpecialBBCode.spoiler=Adauga spoiler
 ForumSpecialBBCode.pre=Insereaza tag-ul format 'pre'
 ForumSpecialBBCode.table=Formatul de inserat tabele. Coverteste textul selectat intr-un tabel (Liniile sunt convertite in randuri, textele separate de %s vor fi transformate in celule)
+ForumSpecialBBCode.tableSeparator=Converteste "%s" in celule
 ForumSpecialBBCode.enterSeparator=Adauga un separator
+ForumSpecialBBCode.forumSymbol=Inserare "%s"
+ForumSpecialBBCode.symbols=Inserare simbol: %s
+
+
+ShowNestedQoutes=Arata quote-urile imbricate
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Introduceti numele filtrului:
 foxtrick.transferfilter.delete_filter_ask=Sigur doriti sa stergeti acest filtru?
 foxtrick.transferfilter.save_new_filter=Salveaza filtru nou
 foxtrick.transferfilter.Foxtrick_Filters=Filtre FoxTrick
+
+#Filter
+Filters=Filtre
+Filters.filter=Ok
+Filters.clear=Goliti
+Filters.noFilter=Nici un filtru
+Filters.none=Nici unul
+Filters.days=Zile
+Filters.tsi=TSI
+Filters.stamina=Rezistenta
+Filters.Form=Forma
+Filters.XP=Experienta
+Filters.specialty=Specialitate
+Filters.stars=Stele
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -516,8 +561,11 @@ match.type.youth.friendly.cup=Amical juniori (Reguli cupa)
 matchOrder.noMatchSelected=Niciun meci selectat
 matchOrder.comparedTo=Comparat cu:
 matchOrder.previousPrediction=Predictia anterioara
-matchOrder.previousPrediction=Predictia anterioara
 matchOrder.AddMatchManually=Adauga manual un meci
+matchOrder.swapPositions=Muta pozitiile
+matchOrder.options=Optiuni
+matchOrder.staminaDiscount=Reducere de rezistenta
+matchOrder.summary=Rezumat
 
 #Skills
 Playmaking=Constructie
@@ -556,13 +604,52 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=Portar
+match.pos.kp.abbr=GK
+match.pos.lb=Fundas stanga
+match.pos.lb.abbr=FS
+match.pos.lcd=Fundas central stanga
+match.pos.lcd.abbr=FCS
+match.pos.mcd=Fundas central
+match.pos.mcd.abbr=FC
+match.pos.rcd=Fundas central dreapta
+match.pos.rcd.abbr=FCD
+match.pos.rb=Fundas dreapta
+match.pos.rb.abbr=FD
+match.pos.lw=Extrema stanga
+match.pos.lw.abbr=ES
+match.pos.lcm=Mijlocas central stanga
+match.pos.lcm.abbr=MCS
+match.pos.mcm=Mijlocas central
+match.pos.mcm.abbr=MC
+match.pos.rcm=Mijlocas central dreapta
+match.pos.rcm.abbr=MCD
+match.pos.rw=Extrema dreapta
+match.pos.rw.abbr=ED
+match.pos.lf=Atacant stanga
+match.pos.lf.abbr=AS
+match.pos.mf=Atacant central
+match.pos.mf.abbr=AC
+match.pos.rf=Atacant dreapta
+match.pos.rf.abbr=AD
+
+match.role.setPieces=Executant faze fixe
+match.role.setPieces.abbr=SP
+match.role.captain=Capitan
+match.role.captain.abbr=Capt.
+
+match.player.unknown=Jucator necunoscut
+
 General=General
 
 PlayerNumber=Numarul jucatorului
 PlayerNumber.abbr=#
 
 TSI=Totalul calitatilor individuale
-TSI.abbr=ITC
+TSI.abbr=TCI
+
+CanBePromotedIn=Poate fi promovat in
+CanBePromotedIn.abbr=Prom
 
 Personality=Personalitate
 Agreeability=Agreabilitate
@@ -600,8 +687,12 @@ Speciality.abbr=S
 
 Last_match=Ultimul meci
 Last_match.abbr=Meci
-Last_stars=Ultimul rating
+Last_stars=Stele ultimul meci
 Last_stars.abbr=Rat
+Last_stars_EndOfGame=Stele la finalul ultimului meci
+Last_stars_EndOfGame.abbr=Rt
+Last_stars_decline=Declin stele ultimul meci
+Last_stars_decline.abbr=Dif
 Last_position=Ultima pozitie
 Last_position.abbr=Poz
 Last_match_played_as=A jucat %1 min ca %2 in ultimul lui meci.
@@ -637,8 +728,6 @@ Current_league.abbr=Liga
 
 JoinedSince=Alaturat de la
 JoinedSince.abbr=De la
-HomeGrown=Junior
-HomeGrown.abbr=Jn
 
 Hotlist=Lista de cumparaturi
 Hotlist.abbr=Lista
@@ -679,7 +768,7 @@ foxtrick.linkscustom.confirmremove=Chiar stergi?
 foxtrick.linkscustom.addtag=Adauga un tag
 foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Ajutor
-foxtrick.linkscustom.helptext=In primul rand, acesta este doar modul de editor. Daca faceti click pe antetul acestei casute se va comuta intre editor si modul normal. Doar in modul normal linkurile proprii sunt pe deplin functionale. Linkurile externe statice sunt usor de adaugat, este suficient sa adaugati url-ul complet (Exemplu: http: \ / \ / alltid.org \ / liga \ / 427 \ /). Pentru linkuri interne statice sariti partea cu serverul (exemplu: \ / World \ / Seria \ / Default.aspx? LeagueLevelUnitID = 427). Cu ajutorul etichetelor linkurile sunt schimbate dinamic. De exemplu http: \ / \ / alltid.org \ / Liga \ / [leagueid] va va conduce intotdeauna in alltid in partea ligii care o vizualizati in hattrick. Etichetele care sunt la indemana pe fiecare site sunt listate in casuta de selectare. Poti utiliza doar acele etichete care sunt listate pe situl unde adaugi linkul. Textul produs este doar un exemplu de sablon. Poti scrie la tag-ul dvs. (cu []).
+foxtrick.linkscustom.helptext=In primul rand, acesta este doar modul de editor. Daca faceti click pe antetul acestei casute se va comuta intre editor si modul normal. Doar in modul normal linkurile proprii sunt pe deplin functionale. Linkurile externe statice sunt usor de adaugat, este suficient sa adaugati url-ul complet (Exemplu: http: \ / \ / example.org \ / liga \ / 427 \ /). Pentru linkuri interne statice sariti partea cu serverul (exemplu: \ / World \ / Seria \ / Default.aspx? LeagueLevelUnitID = 427). Cu ajutorul etichetelor linkurile sunt schimbate dinamic. De exemplu http: \ / \ / example.org \ / Liga \ / [leagueid] va va conduce intotdeauna pe pagina ligii cu ID-ul pe care o vizualizati in hattrick. Etichetele care sunt la indemana pe fiecare site sunt listate in casuta de selectare. Poti utiliza doar acele etichete care sunt listate pe situl unde adaugi linkul. Textul produs este doar un exemplu de sablon. Poti scrie la tag-ul dvs. (cu []).
 foxtrick.linkscustom.helptext2=De asemenea puteti exporta linkurile. Pentru a face acest lucru puteti da click pe butonul Export si selectati un fisier pentru a salva acel link. Linkurile sunt adaugate in acest fisier, puteti salva mai multe linkuri intr-un singur fisier. Pentru a importa linkuri mergeti la casuta preferinta de dialog si apoi import preferinte. Doar preferintele prezente in fisierul selectat vor fi importate, care in acest caz sunt linkurile proprii. Nici unul din linkurile precedente nu vor fi sterse.
 foxtrick.matches.income=Venituri:
 
@@ -743,6 +832,15 @@ CopyYouth.fixturesSource=Copiaza sursa meciurilor urmatoare.
 CopyYouth.fixturesSource.copied=Sursa meciurilor urmatoare a fost copiata.
 CopyYouth.goto=Mergi la %s.
 
+MatchReportFormat.MatchReport=Raportul meciului
+MatchReportFormat.lineup=Primul 11
+MatchReportFormat.kickOff=Inceput de meci
+MatchReportFormat.halfTime=Pauza
+MatchReportFormat.fullTime=Final de meci
+MatchReportFormat.extraTime=Prelungiri
+MatchReportFormat.penaltyShootOut=Penaltiuri
+MatchReportFormat.result=Rezultat
+   
 CopySelected.desc=Copiere selectie cu Ctrl + C.
 SpecialPaste.desc=Paste selectie cu Shift + Click Stanga.
 
@@ -780,7 +878,6 @@ copy.table=Copiaza Tabel in HT-ML
 #teampopups
 Manager=Manager
 Team=Echipa
-TeamAtAlltid=Echipa pe Alltid
 Matches=Meciuri
 Players=Jucatori
 last_5_ips=Ultimele 5 logari
@@ -874,6 +971,18 @@ HTMSPrediction.prediction=Rezultat prevazut
 HTMSPrediction.winDrawLoss=Victorie/Egalitate/Infrangere
 HTMSPrediction.title=Analiza meci realizate de HTMS
 HTMSPrediction.changePrediction=Schimba previziunea
+HTMSPrediction.team=Echipa
+
+#htms table of statistical truth
+truthTable.table=Tabel HTMS al adevarului statistic
+truthTable.predicted_position=#
+truthTable.name=Echipa
+truthTable.real_position=Pozitia reala
+truthTable.real_points=Numarul de puncte reale
+truthTable.predicted_points=Predictie numar de puncte
+truthTable.difference=±
+truthTable.notAvailableYet=Date nedisponibile inca. Du-te la HTMS pentru a crea datele necesare.
+truthTable.tableAtHTMS=Acest tabel pe pagina de web HTMS
 
 # HTMSPoints
 HTMSPoints=Puncte HTMS:
