--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -219,8 +219,6 @@ foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Afiseaza numarul mesajel
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Repara afisarea informatiilor de avatar afisate gresit
 foxtrick.HeaderFix.RemoveFlicker.desc=Inlatura miscatul in Forum folosind Headerfix cu Firefox 3.5
 
-
-
 foxtrick.SkinPlugin.desc=Adauga Hattrick-ului propria interfata CSS
 foxtrick.CurrencyConverter.desc=Conversie valutara HT
 foxtrick.MovePlayerStatement.desc=Muta declaratia jucatorului la fata jucatorului. Daca fetele sunt dezactivate, declaratiile vor fi inlaturate
@@ -299,7 +297,7 @@ foxtrick.BackgroundFixed.desc=Imagine fundal statica.
 foxtrick.MatchIncome.desc=Venituri meci in pagina detaliata a meciului
 #YouthSkillHideUnknown
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile necunoscute ale jucatorilor si/sau "maximum" pe pagina juniorilor.
-foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
+foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maximum' pentru a castiga spatiu
 foxtrick.SkillTable.desc=Arata calitatile jucatorilor sub forma unui tabel.
 foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
@@ -359,12 +357,11 @@ foxtrick.MarkAllAsRead.desc=Un buton pentru a marca toate mesajele din forumuri 
 foxtrick.ShowFriendlyBooked.desc=Afiseaza daca o echipa si-a programat amical pe pagina seriei
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Afiseaza amicalele doar la cerere
 foxtrick.TickerAlert.desc=Afiseaza o notificare cand un ticker a sosit
-foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+foxtrick.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
 foxtrick.ShowLineupSet.desc=Evidentiaza echipele care nu si-au dat ordinele, si/sau echipele fara proprietar, si/sau echipele castigatoare la rezultate
 foxtrick.ShowLineupSet.LineupSet.desc=Evidentiaza echipele care nu si-au dat ordinele de joc
 foxtrick.ShowLineupSet.Ownerless.desc=Evidentiaza echipele fara proprietar
 foxtrick.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
-foxtrick.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
 foxtrick.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
 foxtrick.MatchOrderInterface.desc=Setari pe interfata de ordine meci.
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Evidentiaza jucatorii care au jucat in ultimul meci si arata ultima lor pozitie si minutele jucate in casuta de detalii
@@ -1134,9 +1131,6 @@ foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta si importa preferinte
 foxtrick.prefs.captionCleanupBranch=Preferinte stocate
 foxtrick.prefs.captionLoadSavePrefs=Exporta sau importa preferinte
-#statusbarpref
-foxtrick.prefs.labelCleanupBranch=Restaureaza setarile implicite. (doar setari implicite, nu personale)
-foxtrick.prefs.oauth.delete=Sterge Auth pentru echipa selectata.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Se aplica doar pentru acest navigator. Pentru a inlatura total accesul FoxTrick asupra unei echipe, folositi  {CHPP management} Hattrickului.
 
