Added missing lines to Romanian file
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8033 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -45,9 +45,6 @@ foxtrick.Ratings.HTitaVal.desc=HTitaVal
 foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Modificati culoarea bookmark-ului inserand in comentariul bookmark-ului codul corespunzator intre paranteze patrate: de exemplu: [cyan] va arata pictograma cyan. Valori posibile: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 
-
-
-
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Arata mediana preturilor de transfer in 'Compara transferul'
 foxtrick.FlagCollectionToMap.desc=Arata o harta a lumii cu toate tarile ale caror steaguri le-ati colectat in fiecare categorie
@@ -55,7 +52,7 @@ foxtrick.TransferSearchFilters.desc=Permite adaugarea unor sabloane cu filtre de
 foxtrick.TransferSearchResultFilters.desc=Filtre aditionale pentru filtrarea rezultatelor listei de transferuri
 foxtrick.TransferDeadline.desc=Adauga o linie suplimentara pentru fiecare jucator de pe lista de transferuri cu zile, ore si minute pana cand se termina licitatia
 foxtrick.HTDateFormat.desc=Adauga saptamana si sezonul la nivel global/local la cele mai importante date privind paginile HT
-
+foxtrick.HTDateFormat.LocalSeason.desc=Afiseaza sezonul local in locul sezonului global.
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru a seta prima zi a saptamanii (0 = luni, -2 = sambata)
 foxtrick.TeamPopupLinks.desc=Afiseaza o mica fereastra pop-up cu linkuri cand tii cursorul peste un link teamid
 foxtrick.StaffMarker.desc=Marcheaza nickname-urile oficialilor pe forum.
@@ -159,9 +156,8 @@ foxtrick.MatchReportFormat.desc=Prezentare a raportului de meci linie dupa linie
 foxtrick.MatchReportFormat.ShowEventIcons.desc=Adauga pictograme specifice eventurilor.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Colorare separata a propriei echipei
 foxtrick.ForumRedirManagerToTeam.desc=Redirectioneaza link-ul de la pagina managerului la pagina echipei in forumuri
-
+foxtrick.ManagerButtons.desc=Adauga sau schimba butoanele managerului pe pagina managerului si a echipei
 foxtrick.ManagerButtons.GuestBook.desc=Adauga butoanele 'Scrie in cartea de oaspeti' pe pagina managerului si pagina echipei
-
 foxtrick.HTThreadMarker.desc=Marcheaza subiectele create de HT-i
 foxtrick.TeamStats.desc=Creaza o imagine de ansamblu a jucatorilor echipei.
 foxtrick.TeamStats.General.desc=Informatii generale (ITC/varsta)
@@ -202,6 +198,7 @@ foxtrick.FixcssProblems.Page_Minimum_Height.desc=Rezolva saritul paginii cand ni
 foxtrick.FixcssProblems.RTL_Fixes.desc=Repara niste erori legate de limbile cu scrisul de la dreapta la stanga
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Adauga scrollbar fix in forum.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Mareste marimea fontului pentru fontul mic HT.
+foxtrick.FixcssProblems.RemoveForumSneakPeak.desc=Inlatura 'Arunca o privire' de pe toate paginile.
 foxtrick.FixcssProblems.CalendarAutoMinHeight.desc=Utilizeaza inaltimea minima automata pentru calendar pentru a salva spatiu.
 foxtrick.SimplePresentation.desc=Setari aditionale ale prezentarii
 foxtrick.SimplePresentation.League_Table.desc=Adauga linii verticale la clasamentul ligii pentru a putea fi interpretat mai usor.
@@ -214,11 +211,10 @@ foxtrick.ForumPresentation.desc=Additional Forum presentation options
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Inlatura steagurile userului din antentul mesajului de pe Forum
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Inlatura seria userului din antetul mesajului de pe Forum
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Arata intotdeauna continutul spoilerelor
-
 foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Afiseaza numarul mesajelor noi intre paraneteze dupa numaratorul de mesaje
+foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Afiseaza pictograme in loc de link-uri text in subsolul forumului
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Repara afisarea informatiilor de avatar afisate gresit
 foxtrick.HeaderFix.RemoveFlicker.desc=Inlatura miscatul in Forum folosind Headerfix cu Firefox 3.5
-
 foxtrick.SkinPlugin.desc=Adauga Hattrick-ului propria interfata CSS
 foxtrick.CurrencyConverter.desc=Conversie valutara HT
 foxtrick.MovePlayerStatement.desc=Muta declaratia jucatorului la fata jucatorului. Daca fetele sunt dezactivate, declaratiile vor fi inlaturate
@@ -251,6 +247,8 @@ foxtrick.ContextMenuCopy.Link.desc=Optiune pentru a copia locatia linkului in HT
 foxtrick.ContextMenuCopy.HtMl.desc=Optiune pentru a copia continutul selectat in HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Optiune pentru a copia tabelul in HT-ML
 foxtrick.NewMail.desc=Evidentiaza numerotarea mesajelor noi din casuta de mesaj si forum
+foxtrick.NewMail.NotifyMail.desc=Afiseaza o notificare daca ai mesaje noi
+foxtrick.NewMail.NotifyForum.desc=Afiseaza o notificare daca sunt mesaje noi adresate tie pe forum
 foxtrick.CopyYouth.desc=Functii de copiere pentru rapoarte de juniori si surse
 foxtrick.CopyYouth.TrainingReport.desc=Raport antrenament
 foxtrick.CopyYouth.ScoutComment.desc=Comentariu cautaror de talente
@@ -304,7 +302,7 @@ foxtrick.SkillTable.OtherTeams.desc=Activeaza si pentru alte echipe
 foxtrick.SkillTable.ColouredYouth.desc=Afiseaza calitatile colorate
 #HighlightCupwins
 foxtrick.HighlightCupwins.desc=Evidentiaza echipele castigatoare in meciurile din cupa pe pagina meciurilor de cupa
-
+foxtrick.HighlightCupwins.HighlightCupsets.desc=Evidentiaza seturile cupei ( meciurile castigate de echipe cu rang inferior)
 foxtrick.SkillTranslation.desc=Adauga traducerea calitatilor in Engleza pe pagina de ajutor
 #CountryList
 foxtrick.CountryList.desc=Modificari pentru numele tarilor
@@ -378,7 +376,6 @@ foxtrick.RatingsRange.desc=Afiseaza ratinguri medii in statistici in intervalul 
 
 #
 
-
 # IN-GAME STRINGS. translate first
 
 #icons
@@ -442,7 +439,6 @@ foxtrick.seasonstats.friendly=Amicale
 foxtrick.seasonstats.cup=Cupa
 foxtrick.seasonstats.masters=Masters
 
-
 #Newsfeed filter
 foxtrick.LeagueNewsFilter.Filter=Filtru stiri:
 foxtrick.LeagueNewsFilter.all=Toate
@@ -504,7 +500,6 @@ ForumSpecialBBCode.tableSeparator=Converteste "%s" in celule
 ForumSpecialBBCode.enterSeparator=Adauga un separator
 ForumSpecialBBCode.forumSymbol=Inserare "%s"
 ForumSpecialBBCode.symbols=Inserare simbol: %s
-
 
 ShowNestedQoutes=Arata quote-urile imbricate
 
@@ -780,13 +775,13 @@ foxtrick.defensiveTrainer=Un antrenor %s care este adept al apararii.
 foxtrick.offensiveTrainer=Un antrenor %s care este adept al atacului.
 foxtrick.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nici al apararii.
 
+notify.newMail=Ai primit %s mesaj(e).
+notify.newForumMessage=Ai %s mesaje adresate tie pe forum.
+
 htLive=HT Live
 
+foxtrick.modules_allpages=Module care ruleaza pe toate paginile
 HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
-
-
-
-
 
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to release notes in your language. The link better be generic, as you might not translate before actual release, i.e. link should be valid for all relesases
@@ -794,8 +789,6 @@ HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este 
 
 #  NOTE TO TRANSLATORS
 # You can use the following string to link to a topic on Hattrick Forum in your language. In that case translate the string and replace 'languages' with your own language and add relative path to the forum topic in your national forum (go to your forum topic and copy link without 'http://www**.hattrick.org')
-
-
 
 Coach=Antrenor
 CurrentSquad=Echipa actuala
@@ -890,7 +883,9 @@ LastLineup=Ultima asezare
 YouthMatches=Meciuri juniori
 more=Mai multe...
 less=Mai putine...
-
+TeamPopupLinks.prefsCaption=Preferinte Link
+TeamPopupLinks.ShowByDefault=Afiseaza implicit
+TeamPopupLinks.ShowOnMore=Afiseaza mai multe
 
 # AdvancedStarsCounter
 total_stars=Numar total stele
