Small german locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8035 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -33,14 +33,15 @@ foxtrick.AttVsDef.newstyle.desc=Neuer Stil
 
 #Ratings
 foxtrick.Ratings.desc=Anzeige diverser Ratings im Spielbericht
+foxtrick.Ratings.HideAverages.desc=Durchschnittliche Ratings verstecken
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (Details)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats aufgeschlüsselt nach Rating
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-
-
-
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Icons in Verbindung mit einem Bookmark-Eintrag in den Bookmarks-Kommentaren können wie folgt hinzugefügt werden: z.B: [cyan] - zeigt ein cyanfarbenes Icon an. Mögliche Werte: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Zeigt den Medianpreis im Transfervergleich an
@@ -72,18 +73,27 @@ foxtrick.ForumYouthIcons.youth_series.desc=Icon für YouthSeriesID hinzufügen
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergrößern von Textboxen für besseres Schreiben
 foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'pre'-Format hinzufügen
 foxtrick.ForumYouthIcons.table.desc=Icon für Forum 'table'-Format hinzufügen
+
 foxtrick.ForumYouthIcons.debug.desc=Icon für FoxTrick debug log hinzufügen
 foxtrick.ForumYouthIcons.settings.desc=Icon für Foxtrickeinstellungen hinzufügen
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
-
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Verschachtelte Zitate ab einer gewissen Tiefe als Spoiler anzeigen. Die benötigte Tiefe der Verschachtelung bitte unten angeben.
+#EmbedMedia
+foxtrick.EmbedMedia.desc=Erkennt Links zu Medien und bettet diese direkt in die Seite ein.
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=YouTube Videos einbetten
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Vimeo Videos einbetten
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=FunnyOrDie Videos einbetten
+foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Dailymotion Videos einbetten
+#Forum direct page links
+foxtrick.DirectPageLinks.desc=Fügt Links bei mehrseitigen Threads ein, welche es erlauben direkt auf eine bestimmte Seite zu springen.
+#
 foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 foxtrick.CopyPosting.desc=Hinzufügen eines Icons für das Kopieren eines Postings incl. der Referenzen
 foxtrick.ShowForumPrefButton.desc=Anzeige des Link-Icons für die Foreneinstellungen auf jeder Foren-Seite
 
 foxtrick.LinksLeague.desc=Links hinzufügen auf der Liga-Seite
 foxtrick.LinksTeam.desc=Links hinzufügen auf der Verein-Seite
-
 foxtrick.LinksCountry.desc=Links hinzufügen auf der Länder-Seite
 foxtrick.LinksChallenges.desc=Links hinzufügen auf der Forderungen-Seite
 foxtrick.LinksEconomy.desc=Links hinzufügen auf der Finanzen-Seite
@@ -140,6 +150,7 @@ foxtrick.ForumLastPost.lastpage.desc=Springe zur letzten Seite, nicht zum letzte
 foxtrick.MatchPlayerColouring.desc=Spieler im Spielbericht farblich hervorheben
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Eigene Farben für das eigene Team
 foxtrick.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Ereignisspezifische Symbole hinzufügen
 
 foxtrick.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 foxtrick.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
@@ -255,7 +266,6 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=TeamPopupLinks den Vereinslinks zufügen
 foxtrick.TeamPopupLinks.UserLinks.desc=TeamPopupLinks den Managerlinks zufügen
 foxtrick.TeamPopupLinks.Manager.desc=Link zum Manager (nur für Vereinslinks)
 foxtrick.TeamPopupLinks.Team.desc=Link zum Verein (nur für Managerlinks)
-foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Link zur Vereinsübersicht auf Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Link zu den aktuellen Spielen
 foxtrick.TeamPopupLinks.Players.desc=Link zur Spielerübersicht
 foxtrick.TeamPopupLinks.last_5_ips.desc=Link zu den letzten 5 Logins
@@ -403,7 +413,8 @@ foxtrick.TeamStats.TransferListed.label=Transfergelistet
 foxtrick.TeamStats.Pictures.label=Gesichter
 foxtrick.TeamStats.PlayedLatest.label=Einsatz im letzten Spiel
 foxtrick.TeamStats.NotPlayedLatest.label=Ohne Einsatz im letzten Spiel
-
+foxtrick.TeamStats.NotTransferListed.label=Nicht transfergelistet
+foxtrick.TeamStats.ActivePlayers.label=Aktive Spieler
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigengewächse
 foxtrick.TeamStats.PurchasedPlayers.label=Gekaufte
 
@@ -486,6 +497,8 @@ ForumSpecialBBCode.pre='pre' Format-Tag einfügen
 ForumSpecialBBCode.table=Fügt 'table'-Tags ein bzw. konvertiert den ausgewählten Text in ein Tabelle (Linien werden zu Reihen. Durch "%s" getrennter Text wird zu Zellen.)
 ForumSpecialBBCode.tableSeparator=Konvertiert "%s" in Zellen
 ForumSpecialBBCode.enterSeparator=Eigenen Seperator eingeben
+ForumSpecialBBCode.forumSymbol="%s" einfügen
+ForumSpecialBBCode.symbols=Symbol einfügen: %s
 
 
 
@@ -542,6 +555,8 @@ match.type.youth.friendly.cup=Jugendfreundschaftspiel (Pokalregeln)
 
 
 matchOrder.swapPositions=Seiten vertauschen
+
+
 
 
 #Skills
@@ -615,6 +630,8 @@ categories.E2=E2
 
 
 
+
+
 General=Allgemein
 
 PlayerNumber=Spielernummer
@@ -622,6 +639,9 @@ PlayerNumber.abbr=#
 
 TSI=Total Skill Index
 TSI.abbr=TSI
+
+CanBePromotedIn=Kann befördert werden in
+
 
 Personality=Personalität
 Agreeability=Beliebtheit
@@ -641,8 +661,8 @@ Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
 
-
-
+Loyality=Treue
+Loyality.abbr=Tr
 
 
 
@@ -700,8 +720,6 @@ Current_league.abbr=Liga
 
 JoinedSince=Im Verein seit
 JoinedSince.abbr=Seit
-HomeGrown=Jugendspieler
-HomeGrown.abbr=Jugi
 
 Hotlist=Beobachten
 Hotlist.abbr=Beob.
